2008-07-31  Ivan frade  <ivan.frade@nokia.com>

	* tests/libtracker-common/tracker-parser-test.c:
	Added test to tracker_parser_text_fast

2008-07-31  Ivan Frade  <ivan.frade@nokia.com>

	* utils/qdbm/Makefile.am
	* utils/qdbm/print-words.c
	* src/libtracker-common/tracker-index-item.[ch]
	* src/libtracker-common/tracker-index-item.h:
	(tracker_index_item_get_id): New method to access id.
	Using the common tracker-index-item instead a local copy in the
	utility program.
	
2008-07-30  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-common/tracker-utils.c (tracker_seconds_to_string):
	* src/tracker-indexer/tracker-indexer.c (index_text_contents)
	(process_file): Plug a few leaks.

2008-07-30  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-metadata.[ch]: Make it accept just
	strings and lists of strings at the moment, strings are anyways needed
	to insert values through stored DB procedures, and there are some
	metadata types that will be difficult to store in a generic way.
	Since this API will be used from third party code, any failure in 
	there will be quite hard to debug if we use a generic API, (it will 
	probably crash inside tracker-indexer code, making things harder). 
	By using strings we guarantee that at least sloppy third party module 
	developers will get compiler warnings, which is safer.
	* src/tracker-indexer/tracker-indexer.c (index_metadata_item): Adapt
	to API change.
	* src/tracker-indexer/modules/files.c (tracker_metadata_get_embedded):
	Remove unnecessary check.

2008-07-30  Carlos Garnacho  <carlos@imendio.com>

	* data/services/audio.metadata: Genre and Performer shouldn't have
	multiple values.

2008-07-30  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c (process_func): Reset the
	number of processed items after committing a transaction.

2008-07-29  Ivan Frade  <ivan.frade@nokia.com>

	* tests/libtracker-common/tracker-file-utils-test.c